# Lab-Algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithms/headers/: algorithms.hpp
algorithms/sources/: algorithms.cpp
benchmark/: benchmark.hpp  timer.hpp
headers/: algorithms.hpp  avltree.hpp  benchmark.hpp  generator.hpp  tests.hpp  timer.hpp
sources/: tests.cpp
tests/headers/: tests.hpp
tests/sources/: tests.cpp
